<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ARDFManager</string>
    <string name="unknown" translatable="false">\?</string>
    <string name="general_automatic">Automatic</string>
    <string name="general_band">Band</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_category">Category</string>
    <string name="general_categories">Categories</string>
    <string name="general_club">Club</string>
    <string name="general_close">Close</string>
    <string name="general_competitor">Competitor</string>
    <string name="general_competitors">Competitors</string>
    <string name="general_controls">Controls</string>
    <string name="general_copy">Copy</string>
    <string name="general_date">Date</string>
    <string name="general_disabled">Disabled</string>
    <string name="general_display">Display</string>
    <string name="general_duplicate">Duplicate</string>
    <string name="general_finish">Finish</string>
    <string name="general_finish_time">Finish time</string>
    <string name="general_gender">Gender</string>
    <string name="general_gender_man">Man</string>
    <string name="general_gender_woman">Woman</string>
    <string name="general_index">Index</string>
    <string name="general_invalid">Invalid</string>
    <string name="general_length">Length</string>
    <string name="general_limit">Limit</string>
    <string name="general_main">Main</string>
    <string name="general_max_age">Maximal age</string>
    <string name="general_name">Name</string>
    <string name="general_ok" translatable="false">OK</string>
    <string name="general_points">Points</string>
    <string name="general_place">Place</string>
    <string name="general_preview">Preview</string>
    <string name="general_print">Print</string>
    <string name="general_race">Race</string>
    <string name="general_readouts">Readouts</string>
    <string name="general_required">Required</string>
    <string name="general_results">Results</string>
    <string name="general_run_time">Run time</string>
    <string name="general_si_number">SI number</string>
    <string name="general_splits">Splits</string>
    <string name="general_start">Start</string>
    <string name="general_start_time">Start time</string>
    <string name="general_status">Status</string>
    <string name="general_type">Type</string>
    <string name="general_url" translatable="false">URL</string>
    <string name="general_year_of_birth">Year of birth</string>
    <string name="duplicate_si_number">Duplicate SI number!</string>
    <string name="si_number_invalid_range">Invalid SI number range!</string>
    <string name="files_data">Files and data</string>
    <string name="data_type">Data type</string>
    <string name="data_format">Data format</string>
    <string name="data_import">Import</string>
    <string name="data_export">Export</string>
    <string name="data_import_data">Import data</string>
    <string name="data_import_preview_info">Number of records: %1$d</string>
    <string name="data_import_file_error">Error when opening file!</string>
    <string name="data_import_format_not_supported">Given datatype is not supported for import</string>
    <string name="data_import_invalid_line">Invalid data at line %1$d: %2$s</string>
    <string name="data_import_category_duplicate">Duplicate category names: %1$s</string>
    <string name="data_import_competitor_blank_name">Missing first/last name at line: %1$d</string>
    <string name="data_import_competitor_invalid_si">Invalid SI number at line: %1$d</string>
    <string name="data_import_competitor_duplicate_si_file">Duplicate SI number in file: %1$d</string>
    <string name="data_import_competitor_duplicate_si_race">SI number already exists in race: %1$d</string>
    <string name="data_import_competitor_duplicate_start_number_file">Duplicate start number in file: %1$d</string>
    <string name="data_import_competitor_duplicate_start_number_race">Start number already exists in race: %1$d</string>
    <string name="data_import_race_blank_name">Race name can\'t be blank!</string>
    <string name="data_import_alias_name_duplicate">Duplicate alias names: %1$s</string>
    <string name="data_import_alias_code_duplicate">Duplicate alias codes: %1$s</string>
    <string name="data_import_readout_multiple_start">Multiple start punches present at readout: %1$s</string>
    <string name="data_import_readout_multiple_finish">Multiple finish punches present at readout: %1$s</string>
    <string name="race_import_text">Import race from a file</string>
    <string name="race_export_success">Race exported successfully</string>
    <string name="race_import_success">Race imported successfully</string>
    <string name="race_import_failure">Failed to import race</string>
    <string name="race_toolbar_title">Races overview</string>
    <string name="race_level">Level</string>
    <string name="race_type">Race type</string>
    <string name="race_api_key">ROBis API key</string>
    <string name="race_limit_hint">Limit (min)</string>
    <string name="race_start_time_hint">Start time (hh:mm)</string>
    <string name="race_relative_start_time_hint">Relative start time (mm:ss)</string>
    <string name="race_end_confirmation">Do you really want to close the current race?</string>
    <string name="race_create">Create race</string>
    <string name="race_edit">Edit race</string>
    <string name="race_import">Import race</string>
    <string name="race_delete">Delete race</string>
    <string name="race_delete_confirmation">Do you really want to delete this race?</string>
    <string name="race_export">Export race</string>
    <string name="race_end">Close race</string>
    <string name="si_codes">SI codes</string>
    <string name="category_create_standard_categories">Create standard categories</string>
    <string name="category_manage_aliases">Manage aliases</string>
    <string name="no_category">No category</string>
    <string name="category_create">Create category</string>
    <string name="category_edit">Edit category</string>
    <string name="category_duplicate">Duplicate category</string>
    <string name="category_delete">Delete category</string>
    <string name="category_delete_confirmation">Do you really want to delete this category?\n%1$s</string>
    <string name="category_length_title">Length (km)</string>
    <string name="category_climb_title">Climb (m)</string>
    <string name="category_exists">Category already exists!</string>
    <string name="control_points">Control points</string>
    <string name="nonexistent_year">Invalid year</string>
    <string name="invalid_max_age">Max age is already taken for category %1$s!</string>
    <string name="category_same_type">Same type as race</string>
    <string name="control_point_edit_hint">Input SI codes, separated by space. ! stands for spectator control (sprint only), B for beacon. Aliases are then managed in a separate dialog.</string>
    <string name="control_point_unknown_specifier"> Unknown special control specifier: %1$s</string>
    <string name="control_point_invalid_range"> Invalid SI range: %1$s. The code must be greater than 30 and less than 256 </string>
    <string name="control_point_two_in_row">" Two identical control points can't be in a row."</string>
    <string name="control_point_orienteering_special"> Orienteering can\'t contain special control points.</string>
    <string name="control_point_classic_duplicate"> Duplicate control points are not allowed in a classic race.</string>
    <string name="control_point_non_last_beacon"> Beacon must be the last control point.</string>
    <string name="control_point_classic_spectator_not_allowed"> Spectator control points are not allowed on a classic race.</string>
    <string name="control_point_sprint_duplicate"> Duplicate controls are not allowed in a single lap of a sprint race.</string>
    <string name="control_point_sprint_two_usages">" Control point with SI code [%1$d] used as a separator / beacon and as a control."</string>
    <string name="category_preset_international">International</string>
    <string name="category_preset_czech">Czech</string>
    <string name="competitor_first_name">First name</string>
    <string name="readout_edit_readout">Edit readout</string>
    <string name="readout_delete_readout">Delete readout</string>
    <string name="readout_create_category_from_readout">Create a category from this readout</string>
    <string name="readout_assign_control_points">Assign controls to a category</string>
    <string name="results_share">Share results</string>
    <string name="results_service">Results service</string>
    <string name="result_service_enable">Enable results service</string>
    <string name="result_service_send_again">Send results again</string>
    <string name="prints_result_ticket">Print ticket</string>
    <string name="global_settings">Global settings</string>
    <string name="preferences_general">General</string>
    <string name="preferences_prints">Prints</string>
    <string name="preferences_help">Help</string>
    <string name="preferences_general_keep_screen_open">Prevent system from locking screen</string>
    <string name="preferences_general_keep_screen_open_hint">When selected, the screen won\'t automatically turn off.</string>
    <string name="preferences_general_language">Language</string>
    <string name="preferences_general_language_hint">Manually select a language of the app. The app needs to be restarted after.</string>
    <string name="lang_en" translatable="false">English</string>
    <string name="preferences_readout_sounds">Sounds</string>
    <string name="preferences_readout_sounds_hint">Select sound that should be used when a card is read out.</string>
    <string name="preferences_readout_duplicate_actions">Duplicate SI card actions</string>
    <string name="preferences_readout_duplicate_actions_hint">Select what should be performed when a card is read twice.</string>
    <string name="preferences_readout_duplicate_ignore">Ignore</string>
    <string name="preferences_results_time_format">Time format</string>
    <string name="preferences_results_time_format_hint">Time format used in results display. Either mm:ss or hh:mm:ss\n[%1$s]</string>
    <string name="preferences_results_time_format_minutes" translatable="false">mm:ss</string>
    <string name="preferences_results_use_aliases">Use aliases</string>
    <string name="preferences_results_use_aliases_hint">Use defined aliases for control points instead of SI codes</string>
    <string name="preferences_results_service">Result service sending</string>
    <string name="preferences_results_service_hint">Select when to send the results with the result service.</string>
    <string name="preferences_result_service_matched_value" translatable="false">competitor_matched</string>
    <string name="preferences_files_invalid_stops_import">Stop import on invalid record</string>
    <string name="preferences_file_import_skip_hint">If selected, an invalid line or record stops the import.</string>
    <string name="preferences_files_prefer_app_start_time">Don\'t overwrite start time</string>
    <string name="preferences_file_prefer_app_start_time_hint"> When importing start times, a preset start time in the app won\'t be overwritten by the one in a file.</string>
    <string name="preferences_prints_hint">Printer selection, automatic printing etc.</string>
    <string name="preferences_changelog">Changelog</string>
    <string name="preferences_about_app">About the app</string>
    <string name="about_app_version">Version %1$s</string>
    <string name="about_app_description">ARDF Manager is an open-source tool for organizing Amateur Radio Direction Finding (ARDF) and orienteering competitions. </string>
    <string name="about_app_link" translatable="false">GitHub: https://github.com/kolskypavel/ARDF-Manager </string>
</resources>