<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/preferences_general"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_keep_screen_open"
            android:summary="@string/preferences_general_keep_screen_open_hint"
            android:title="@string/preferences_general_keep_screen_open"
            app:iconSpaceReserved="false" />

        <!--        <CheckBoxPreference-->
        <!--            android:defaultValue="false"-->
        <!--            android:key="show_log"-->
        <!--            android:title="@string/preferences_general_show_log" />-->

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="@string/lang_en"
            android:entries="@array/language_names"
            android:entryValues="@array/language_codes"
            android:key="@string/key_app_language"
            android:summary="@string/preferences_general_language_hint"
            android:title="@string/preferences_general_language"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/general_categories"
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false" />

    <PreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/general_readouts"
        app:iconSpaceReserved="false">

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="@string/preferences_readout_duplicate_ignore"
            android:entries="@array/preferences_readout_duplicate_options"
            android:entryValues="@array/preferences_readout_duplicate_values"
            android:key="@string/key_readout_duplicate"
            android:summary="@string/preferences_readout_duplicate_actions_hint"
            android:title="@string/preferences_readout_duplicate_actions"
            app:iconSpaceReserved="false" />

        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:key="@string/key_readout_sounds"
            android:summary="@string/preferences_readout_sounds_hint"
            android:title="@string/preferences_readout_sounds"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/general_results"
        app:iconSpaceReserved="false">

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="@string/preferences_results_time_format_minutes"
            android:entries="@array/preferences_results_time_format_options"
            android:entryValues="@array/preferences_results_time_format_options"
            android:key="@string/key_results_time_format"
            android:summary="@string/preferences_results_time_format_hint"
            android:title="@string/preferences_results_time_format"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="1"
            android:key="@string/key_results_use_aliases"
            android:summary=""
            android:title="@string/preferences_results_use_aliases"
            app:iconSpaceReserved="false"
            app:summary="@string/preferences_results_use_aliases_hint" />
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="@string/preferences_result_service_matched_value"
            android:entries="@array/preferences_result_service_options"
            android:entryValues="@array/preferences_result_service_values"
            android:key="@string/key_result_service"
            android:summary="@string/preferences_results_service_hint"
            android:title="@string/preferences_results_service"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/files_data"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="@string/key_files_invalid_stops_import"
            android:summary=""
            android:title="@string/preferences_files_invalid_stops_import"
            app:iconSpaceReserved="false"
            app:summary="@string/preferences_file_import_skip_hint" />

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:key="@string/key_files_prefer_app_start_time"
            android:summary=""
            android:title="@string/preferences_files_prefer_app_start_time"
            app:iconSpaceReserved="false"
            app:summary="@string/preferences_file_prefer_app_start_time_hint" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/preferences_prints"
        app:iconSpaceReserved="false" />

    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:key="@string/key_prints"
        android:summary="@string/preferences_prints_hint"
        android:title="@string/preferences_prints"
        app:iconSpaceReserved="false" />

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/preferences_help"
        app:iconSpaceReserved="false">

        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="Default value"
            android:key="@string/key_about_app"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_about_app"
            app:iconSpaceReserved="false" />

        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="Default value"
            android:key="@string/key_changelog"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_changelog"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</PreferenceScreen>