<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/readout_detail_menu_edit_readout"
        android:icon="@drawable/ic_edit"
        android:title="@string/readout_edit_readout"
        app:showAsAction="always" />
    <item
        android:id="@+id/readout_detail_menu_print_ticket"
        android:icon="@drawable/ic_print"
        android:title="@string/prints_result_ticket"
        app:showAsAction="always" />

    <item
        android:id="@+id/readout_detail_menu_create_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/readout_create_category_from_readout" />

    <item
        android:id="@+id/readout_detail_menu_assign_controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/readout_assign_control_points" />

    <item
        android:id="@+id/readout_detail_menu_delete_readout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/readout_delete_readout" />
</menu>