<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/dialog_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/general_type"
            android:textColor="@color/black">

            <AutoCompleteTextView
                android:id="@+id/result_service_dialog_type"
                style="@style/dialog_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:simpleItems="@array/result_service_types" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/results_service_dialog_url_layout"
            style="@style/dialog_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/general_url"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/results_service_dialog_url"
                style="@style/dialog_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/results_service_dialog_api_key_layout"
            style="@style/dialog_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/race_api_key">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/results_service_dialog_api_key"
                style="@style/dialog_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/results_service_dialog_interval_layout"
            style="@style/dialog_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/result_service_interval">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/results_service_dialog_interval"
                style="@style/dialog_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/result_service_dialog_enable"
            style="@style/dialog_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/result_service_enable" />

        <Button
            android:id="@+id/results_service_dialog_resend_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:text="@string/result_service_send_again" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_status"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/results_service_dialog_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general_disabled" />

        <TextView
            android:id="@+id/results_service_dialog_error"
            style="@style/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/results_service_dialog_close"
            style="@style/dialog_ok_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="12dp"
            android:text="@string/general_close" />

    </LinearLayout>


</ScrollView>